--- a/index.html
+++ b/index.html
@@ -1,64 +1,104 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hm1 by yuhueilin</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Hm1</h1>
-        <p></p>
+<head>
+    <meta charset="UTF-8">
+    <title>林育慧HW1</title>
+    <!--<link rel="stylesheet" type="text/css" href="stlye.css">-->
+</head>
 
-        <p class="view"><a href="https://github.com/yuhueilin/hm1">View the Project on GitHub <small>yuhueilin/hm1</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/yuhueilin/hm1/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/yuhueilin/hm1/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/yuhueilin/hm1">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/yuhueilin">yuhueilin</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+<body>
+    <!------------ EX1 ------------>
+    <div>
+        <br> 關&nbsp;&nbsp;關&nbsp;&nbsp;雎&nbsp;&nbsp;鳩
+        <br> 在&nbsp;&nbsp;河&nbsp;&nbsp;之&nbsp;&nbsp;洲
+        <br> 窈&nbsp;&nbsp;窕&nbsp;&nbsp;淑&nbsp;&nbsp;女
+        <br> 君&nbsp;&nbsp;子&nbsp;&nbsp;好&nbsp;&nbsp;逑
+        <br>
+        <br> 詩．周南．關睢
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+
+    <!------------ EX2 ------------>
+    <div>
+        <h1>小王子</h1>
+        <P>然後他又回到狐狸那裡。</P>
+        <P>「再見了！」小王子說。</P>
+        <P>「再見了！」狐狸說。</P>
+        <blockquote>「我的秘密很簡單：<strong>唯有心才能看得清楚，眼睛是看不到真正重要的東西的</strong>。」</blockquote>
+        <p>小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <br>
+
+    <!------------ EX3 ------------>
+    <div>
+        <table border="1">
+            <tr>
+                <td colspan="2">一起看看小王子留給我們與人生的六個關係練習</td>
+            </tr>
+            <tr>
+                <td rowspan="2">與自己的關係</td>
+                <td>每個人都有自己的孤單課題</td>
+            </tr>
+            <tr>
+                <td>你不需要變成你不喜歡的大人</td>
+            </tr>
+            <tr>
+                <td rowspan="2">與愛人的關係</td>
+                <td>從心甘情願豢養與被豢養開始</td>
+            </tr>
+            <tr>
+                <td>因為他是你的玫瑰</td>
+            </tr>
+            <tr>
+                <td rowspan="2">與世界的關係</td>
+                <td>用「心」去尋覓你笑著的理由</td>
+            </tr>
+            <tr>
+                <td>分離的時候，學會道別</td>
+            </tr>
+        </table>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <br>
+
+    <!------------ EX4 ------------>
+    <div>
+        <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars" (target="_new" )><img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif" alt="在火星上發現水存在的證據" (width="500" height="130" )>
+        </a>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <br>
+
+    <!------------ EX5 ------------>
+    <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d231263.10152744217!2d121.5615012!3d25.085406099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1szh-TW!2stw!4v1477406630003" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
+</body>
+
 </html>
